# bot_telegram

./: .env.example  README.md  pyproject.toml
files/: docs.txt
src/: config.py  datetimer.py  main.py
