[project]
name = "bot-telegram"
version = "0.1.0"
description = ""
authors = [
    {name = "Vova"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytelegrambotapi (>=4.29.1,<5.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
